--- a/client/content/css/styles.css
+++ b/client/content/css/styles.css
@@ -51,6 +51,11 @@ main{
   border-radius: 10px;
 }
 
+.sort-header {
+  margin-top: 10px;
+  margin-left: 5px;
+}
+
 .content{
   padding: 20px;
 }
@@ -63,6 +68,19 @@ main{
   cursor: pointer;
   color: #777;
   border: 0;
+  box-shadow: 2px 2px 2px rgba(20,20,20,0.1);
+  font-size: 16px;
+}
+
+.content select {
+  background: #fff;
+  padding: 7px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #777;
+  border: 0;
+  margin-top: 10px;
+  margin-left: 2px;
   box-shadow: 2px 2px 2px rgba(20,20,20,0.1);
   font-size: 16px;
 }
@@ -93,7 +111,7 @@ main{
   font-size: 22px;
 }
 
-.content input{
+.content input[type="text"]{
   width: 90%;
   padding: 10px 5%;
   border-radius: 10px;
@@ -108,15 +126,13 @@ main{
 }
 
 .remove{
-  float: right;
-  padding: 5px;
+  padding: 15px;
   background: #fff;
-  width: 18px;
+  width: 50px;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 10px;
   color: crimson;
   cursor: pointer;
-  margin-left: 10px;
 }
 
 input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
